--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -6,25 +6,15 @@ on:
 
 jobs:
   ci:
-    name: ci
-    runs-on: ubuntu-18.04
-
-    services:
-      mariadb:
-        image: mariadb
-        env:
-          MYSQL_USER: 'root'
-          MYSQL_ALLOW_EMPTY_PASSWORD: "true"
-        options: --health-cmd="mysqladmin ping" --health-interval 10s --health-timeout 5s --health-retries 3
-        ports:
-          - 3306:3306
+    name: cron
+    runs-on: ubuntu-latest
 
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         moodle-branch: ['MOODLE_311_STABLE']
         php: ['7.4']
-        database: ['mariadb']
+        database: ['mysqli']
 
     steps:
       - name: checkout plugin
@@ -36,9 +26,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          extensions: mbstring, pgsql, mysqli
-          tools: composer, behat, phpunit, phpmd, phpcbf, phpcpd, psalm, phpcs
-          coverage: xdebug
+          extensions: mbstring, mysqli, gd, zip
 
       - name: composer
         run: |
@@ -46,9 +34,10 @@ jobs:
           echo $(cd ci/bin; pwd) >> $GITHUB_PATH
           echo $(cd ci/vendor/bin; pwd) >> $GITHUB_PATH
           sudo locale-gen en_AU.UTF-8
+          sudo systemctl start mysql.service
 
       - name: install Moodle
-        run: moodle-plugin-ci install --db-host=127.0.0.1 --plugin this-plugin
+        run: moodle-plugin-ci --ansi install --db-user=root --db-pass=root --db-host=127.0.0.1 --plugin this-plugin
         env:
           DB: ${{ matrix.database }}
           MOODLE_BRANCH: ${{ matrix.moodle-branch }}
@@ -61,6 +50,9 @@ jobs:
 
       - name: phpmd
         run: moodle-plugin-ci --ansi phpmd
+
+      - name: phpdoc
+        run: moodle-plugin-ci --ansi phpdoc
 
       - name: codechecker
         run: moodle-plugin-ci --ansi codechecker
@@ -82,13 +74,3 @@ jobs:
 
       - name: firefox
         run: moodle-plugin-ci --ansi behat
-      
-      - name: chrome
-        run: moodle-plugin-ci --ansi behat --profile chrome
-
-      - name: coveralls
-        env:
-          COVERALLS_RUN_LOCALLY: true
-          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-        run: moodle-plugin-ci --ansi coveralls-upload
-        if: matrix.moodle-branch == 'master'
