--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        moodle-branch: ['master']
+        moodle-branch: ['master', 'MOODLE_311_STABLE']
         php: ['7.4']
         database: ['mariadb', 'pgsql']
 
