--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        moodle-branch: ['master', 'MOODLE_311_STABLE']
-        php: ['7.4']
+        moodle-branch: ['master']
+        php: ['8.0', '7.4']
         database: ['mariadb', 'pgsql']
 
     steps:
